--- a/CódigoFuente/Bitacoras/App.config
+++ b/CódigoFuente/Bitacoras/App.config
@@ -1,9 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="OldPortalConnection" connectionString="metadata=res://*/Models.OldPortalContext.csdl|res://*/Models.OldPortalContext.ssdl|res://*/Models.OldPortalContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.10.156\dwtkmm;initial catalog=Portalthyssenkrupp;persist security info=True;user id=ThyssenTest;password=P0rt4l*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="OldPortalConnection" connectionString="metadata=res://*/Models.OldPortalContext.csdl|res://*/Models.OldPortalContext.ssdl|res://*/Models.OldPortalContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.10.156\dwtkmm;initial catalog=Portalthyssenkrupp;persist security info=True;user id=ThyssenTest;password=P0rt4l*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
