--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -195,6 +195,14 @@
     <Compile Include="Migrations\202109082218074_CamposUsuarios.Designer.cs">
       <DependentUpon>202109082218074_CamposUsuarios.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202110041536423_IdEmpleado_Usuarios.cs" />
+    <Compile Include="Migrations\202110041536423_IdEmpleado_Usuarios.Designer.cs">
+      <DependentUpon>202110041536423_IdEmpleado_Usuarios.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202110042233190_Actualizacion_UserAdmin.cs" />
+    <Compile Include="Migrations\202110042233190_Actualizacion_UserAdmin.Designer.cs">
+      <DependentUpon>202110042233190_Actualizacion_UserAdmin.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AdminViewModel.cs" />
@@ -3714,6 +3722,7 @@
     <Content Include="Scripts\Forms\empleados.js" />
     <Content Include="Scripts\Forms\areas.js" />
     <Content Include="Scripts\Forms\puestos.js" />
+    <Content Include="Scripts\Forms\usuarios.js" />
     <Content Include="Scripts\index.js.flow" />
     <Content Include="Scripts\esm\popper.min.js.map" />
     <Content Include="Scripts\esm\popper.js.map" />
@@ -4788,6 +4797,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202109082218074_CamposUsuarios.resx">
       <DependentUpon>202109082218074_CamposUsuarios.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202110041536423_IdEmpleado_Usuarios.resx">
+      <DependentUpon>202110041536423_IdEmpleado_Usuarios.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202110042233190_Actualizacion_UserAdmin.resx">
+      <DependentUpon>202110042233190_Actualizacion_UserAdmin.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
