--- a/CódigoFuente/BitacorasProduccion/packages.config
+++ b/CódigoFuente/BitacorasProduccion/packages.config
@@ -5,7 +5,8 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
-  <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Core.es" version="2.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Samples" version="2.2.0-alpha1" targetFramework="net472" />
