2021-10-12 Se agregan reportes de pesadas de Silao y Puebla

--- a/CódigoFuente/Bitacoras/Clases.csproj
+++ b/CódigoFuente/Bitacoras/Clases.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DBUtil\ExcepcionesDBUtil.cs" />
+    <Compile Include="DBUtil\ReportesPesadasDBUtil.cs" />
     <Compile Include="DBUtil\UsuariosDBUtil.cs" />
     <Compile Include="Models\EntradaRegistroEvento.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
