--- a/CódigoFuente/BitacorasProduccion/packages.config
+++ b/CódigoFuente/BitacorasProduccion/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="4.6.0" targetFramework="net472" />
+  <package id="DocumentFormat.OpenXml" version="2.5" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net472" />
   <package id="ExcelDataReader" version="3.6.0" targetFramework="net45" />
   <package id="ExcelDataReader.DataSet" version="3.6.0" targetFramework="net45" />
@@ -33,6 +34,7 @@
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="popper.js" version="1.16.1" targetFramework="net472" />
   <package id="Respond" version="1.2.0" targetFramework="net472" />
+  <package id="SpreadsheetLight" version="3.4.9" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
