--- a/CódigoFuente/Bitacoras/Clases.csproj
+++ b/CódigoFuente/Bitacoras/Clases.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Models\EntradaRegistroEvento.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\MensajesSweetAlert.cs" />
+    <Compile Include="Util\PFA_Status.cs" />
     <Compile Include="Util\StreamUtil.cs" />
     <Compile Include="Util\TimeSpanUtil.cs" />
     <Compile Include="Util\TipoRoles.cs" />
