2021-11-19 Se agrega busqueda a reportes de PFA

--- a/CódigoFuente/BitacorasProduccion/Web.config
+++ b/CódigoFuente/BitacorasProduccion/Web.config
@@ -14,6 +14,11 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="owin:AppStartup" value="IdentitySample.Startup,BitacorasProduccion" />
+	  <!--Para envio de correo electronico-->
+	  <add key="smtpServer" value="pop4.lagermex.com.mx"/>
+	  <add key="portEmail" value="25"/>
+	  <add key="emailSMTP" value="notificaciones.tkmm@lagermex.com.mx"/>
+	  <add key="paswordEmail" value=""/>
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
