--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -262,6 +262,7 @@
     <Compile Include="Models\empleados.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\EnvioCorreoElectronico.cs" />
     <Compile Include="Models\ExcelUtil.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -374,9 +375,12 @@
     <Content Include="Content\build\images\loading.gif" />
     <Content Include="Content\build\js\custom.js" />
     <Content Include="Content\build\js\custom.min.js" />
+    <Content Include="Content\emails_plantillas\PFA_solicitud_autorizada.html" />
+    <Content Include="Content\emails_plantillas\PFA_solicitud_rechazada.html" />
+    <Content Include="Content\emails_plantillas\PFA_solicitud_recibida.html" />
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
-    <Content Include="Content\images\fondo_cumpleaños.png" />
+    <Content Include="Content\images\logo_174.png" />
     <Content Include="Content\images\logo_4.png" />
     <Content Include="Content\images\logo_1.png" />
     <Content Include="Content\images\logo_2.jpg" />
@@ -4971,6 +4975,7 @@
     <Content Include="Views\PremiumFreightApproval\ListadoSolicitudes.cshtml" />
     <Content Include="Views\ProduccionRegistros\CargarRespaldo.cshtml" />
     <Content Include="Views\ProduccionRegistros\Respaldo.cshtml" />
+    <Content Include="Views\PremiumFreightApproval\ReportesPFA.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
