2021-11-26 Se agregan catálogos PFA

--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -199,6 +199,14 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\mm_v3Controller.cs" />
+    <Compile Include="Controllers\PFA_Border_portController.cs" />
+    <Compile Include="Controllers\PFA_DepartmentController.cs" />
+    <Compile Include="Controllers\PFA_Destination_plantController.cs" />
+    <Compile Include="Controllers\PFA_ReasonController.cs" />
+    <Compile Include="Controllers\PFA_Recovered_costController.cs" />
+    <Compile Include="Controllers\PFA_Responsible_costController.cs" />
+    <Compile Include="Controllers\PFA_Type_shipmentController.cs" />
+    <Compile Include="Controllers\PFA_VolumeController.cs" />
     <Compile Include="Controllers\PlantasController.cs" />
     <Compile Include="Controllers\PremiumFreightApprovalController.cs" />
     <Compile Include="Controllers\ProduccionLineasController.cs" />
@@ -4979,6 +4987,54 @@
     <Content Include="Views\ProduccionRegistros\Respaldo.cshtml" />
     <Content Include="Views\PremiumFreightApproval\ReportesPFA.cshtml" />
     <Content Include="Views\PremiumFreightApproval\EditCreditNote.cshtml" />
+    <Content Include="Views\PFA_Department\Create.cshtml" />
+    <Content Include="Views\PFA_Department\Details.cshtml" />
+    <Content Include="Views\PFA_Department\Edit.cshtml" />
+    <Content Include="Views\PFA_Department\Index.cshtml" />
+    <Content Include="Views\PFA_Department\Disable.cshtml" />
+    <Content Include="Views\PFA_Department\Enable.cshtml" />
+    <Content Include="Views\PFA_Volume\Create.cshtml" />
+    <Content Include="Views\PFA_Volume\Details.cshtml" />
+    <Content Include="Views\PFA_Volume\Disable.cshtml" />
+    <Content Include="Views\PFA_Volume\Edit.cshtml" />
+    <Content Include="Views\PFA_Volume\Enable.cshtml" />
+    <Content Include="Views\PFA_Volume\Index.cshtml" />
+    <Content Include="Views\PFA_Border_port\Create.cshtml" />
+    <Content Include="Views\PFA_Border_port\Details.cshtml" />
+    <Content Include="Views\PFA_Border_port\Disable.cshtml" />
+    <Content Include="Views\PFA_Border_port\Edit.cshtml" />
+    <Content Include="Views\PFA_Border_port\Enable.cshtml" />
+    <Content Include="Views\PFA_Border_port\Index.cshtml" />
+    <Content Include="Views\PFA_Destination_plant\Create.cshtml" />
+    <Content Include="Views\PFA_Destination_plant\Details.cshtml" />
+    <Content Include="Views\PFA_Destination_plant\Disable.cshtml" />
+    <Content Include="Views\PFA_Destination_plant\Edit.cshtml" />
+    <Content Include="Views\PFA_Destination_plant\Enable.cshtml" />
+    <Content Include="Views\PFA_Destination_plant\Index.cshtml" />
+    <Content Include="Views\PFA_Reason\Create.cshtml" />
+    <Content Include="Views\PFA_Reason\Details.cshtml" />
+    <Content Include="Views\PFA_Reason\Disable.cshtml" />
+    <Content Include="Views\PFA_Reason\Edit.cshtml" />
+    <Content Include="Views\PFA_Reason\Enable.cshtml" />
+    <Content Include="Views\PFA_Reason\Index.cshtml" />
+    <Content Include="Views\PFA_Recovered_cost\Create.cshtml" />
+    <Content Include="Views\PFA_Recovered_cost\Details.cshtml" />
+    <Content Include="Views\PFA_Recovered_cost\Disable.cshtml" />
+    <Content Include="Views\PFA_Recovered_cost\Edit.cshtml" />
+    <Content Include="Views\PFA_Recovered_cost\Enable.cshtml" />
+    <Content Include="Views\PFA_Recovered_cost\Index.cshtml" />
+    <Content Include="Views\PFA_Responsible_cost\Create.cshtml" />
+    <Content Include="Views\PFA_Responsible_cost\Details.cshtml" />
+    <Content Include="Views\PFA_Responsible_cost\Disable.cshtml" />
+    <Content Include="Views\PFA_Responsible_cost\Edit.cshtml" />
+    <Content Include="Views\PFA_Responsible_cost\Enable.cshtml" />
+    <Content Include="Views\PFA_Responsible_cost\Index.cshtml" />
+    <Content Include="Views\PFA_Type_shipment\Create.cshtml" />
+    <Content Include="Views\PFA_Type_shipment\Details.cshtml" />
+    <Content Include="Views\PFA_Type_shipment\Disable.cshtml" />
+    <Content Include="Views\PFA_Type_shipment\Edit.cshtml" />
+    <Content Include="Views\PFA_Type_shipment\Enable.cshtml" />
+    <Content Include="Views\PFA_Type_shipment\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
