--- a/CódigoFuente/BitacorasProduccion/Web.config
+++ b/CódigoFuente/BitacorasProduccion/Web.config
@@ -15,10 +15,10 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="owin:AppStartup" value="IdentitySample.Startup,BitacorasProduccion" />
 	  <!--Para envio de correo electronico-->
-	  <add key="smtpServer" value="pop4.lagermex.com.mx"/>
-	  <add key="portEmail" value="25"/>
-	  <add key="emailSMTP" value="notificaciones.tkmm@lagermex.com.mx"/>
-	  <add key="paswordEmail" value=""/>
+	  <add key="smtpServer" value="pop4.lagermex.com.mx" />
+	  <add key="portEmail" value="25" />
+	  <add key="emailSMTP" value="notificaciones.tkmm@lagermex.com.mx" />
+	  <add key="paswordEmail" value="" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -32,7 +32,7 @@
 	  <sessionState timeout="300" />
 	  <globalization uiCulture="es" culture="es-MX" />
 	  <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime maxRequestLength="20480" targetFramework="4.5" />
     <customErrors mode="RemoteOnly">
       <error redirect="~/Error/NotFound" statusCode="404" />
       <error redirect="~/Error/BadRequest" statusCode="400" />
@@ -66,7 +66,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
