--- a/CódigoFuente/BitacorasProduccion/packages.config
+++ b/CódigoFuente/BitacorasProduccion/packages.config
@@ -6,6 +6,7 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net472" />
   <package id="ExcelDataReader" version="3.6.0" targetFramework="net45" />
   <package id="ExcelDataReader.DataSet" version="3.6.0" targetFramework="net45" />
+  <package id="Foolproof" version="0.9.4518" targetFramework="net45" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net45" />
